--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Planet Creator</title>
+    <title>Scrolly Viewer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <div id="pl-root"></div>
+    <div id="sv-root"></div>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
