Call viewer files main

--- a/src/viewer.html
+++ b/src/viewer.html
@@ -3,10 +3,10 @@
   <head>
     <title>Scrolly Viewer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="viewer.css">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <div id="sv-root"></div>
-    <script type="text/javascript" src="viewer.js"></script>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
